--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h2> not start. html right to index .html</h2>
     <img src="img.jpg" alt="">
+    <img src="gm.jpg" alt="">
+    <div>
+        <h2>my ney bolg</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, eligendi.</p>
+    </div>
 </body>
 </html>
