--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <h2>my ney bolg</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, eligendi.</p>
     </div>
+    <h2>my new blog website</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum neque magnam placeat temporibus, quasi veniam repellendus quod hic beatae mollitia molestias saepe eligendi, omnis corporis quos odit repudiandae, autem atque. Nulla laudantium ipsum pariatur commodi aperiam obcaecati, ea hic, perspiciatis molestias sed corporis repellat eveniet. Deleniti asperiores ab expedita architecto odio quisquam nam at? Consequuntur, corporis maxime. Nesciunt sint porro reiciendis, similique dolores, ipsam, mollitia pariatur veritatis blanditiis et odit minus eaque vero sunt eveniet animi dolore perferendis sapiente voluptatum. Autem ut, accusamus, culpa dolores, quo similique nostrum eaque ipsum cumque iure ab in rerum cum fugit eligendi consequatur labore?</p>
 </body>
 </html>
